[package]
name = "wire_serialized_transaction_test_data"
description = "Wire-format serialized Zcash transaction test data covering v1-v4 transaction formats."
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs/wire_serialized_transaction_test_data"
homepage = "https://www.zingolabs.org/"
edition = "2024"
license = "Apache-2.0"
version = "1.0.0"

[dependencies]
